src/sass/styles.scss
/* ... */
body.loading {
    height: 100vh;
}

@keyframes spinner {
    to {transform: rotate(360deg);}
}

.navbar {
    #alert-notifications {
        #app-alerts {
            color: $harris-grey;
            position: relative;
        
            i {
                font-size: 1.5rem;

                @media screen and (min-width: $breakpoint-md) {
                    font-size: 1.9rem;
                }
            }
        
            .badge {
                font-size: .6em;
                line-height: 1.3;
                position: absolute;
                right: .25rem;
                top: 5px;

                @media screen and (min-width: $breakpoint-md) {
                    right: .5rem;
                }
            }
        }

        &.dropdown .dropdown-menu .dropdown-item {
            &:hover {
                background-color: #f8f9fa !important;
                color: #16181b !important;
                text-decoration: none;
            }

            i {
                font-size: 1.2rem;
            }
        }

    }
}

#alert-container {
    padding: 0 .7rem 0 .7rem;

    .alert {
        margin: .5rem 0 0 0;

        &:last-child {
            margin-bottom: .5rem;
        }
    }

    @media screen and (min-width: 1200px) {
        padding-left: 255px;
    }
}

.side-nav {
    .nav-container {
        position: absolute;
        width: 100%;
        height: calc(100% - 120px);
        overflow: auto;

        a {
            height: auto;
            line-height: inherit;
        }
    
        .user-menu {
            padding: 1rem 20px;

            a {
                color: black !important;
                display: inline-block;
                height: auto;
                line-height: .8;
    
                img {
                    max-height: 32px;
                }
            }
    
            .user-menu-dropdown {
                font-size: .8rem;
    
                .dropdown-item {
                    font-size: .9rem;
    
                    i {
                        margin-right: 1rem;
                    }
                }
    
                .list-group-item {
                    padding: 5px 10px;
                }
            }
        }
        .nav {
            .nav-item {
                .nav-link {
                   color: black;
                   font-weight: 700;
                   padding: .8rem 1rem;
    
                   .fa.left-icon {
                       color: $harris-grey;
                       float: none;
                   }
    
                }
    
                &.active {
                    .nav-link {
                        color: $harris-red;
                    }
                }
    
                .nav .nav-item .nav-link {
                    color: $harris-grey;
                    font-weight: 400;
                    margin-left: 3.25rem;
                }
            }
        }
    }

    .harris-logo-wrapper {
        bottom: 10px;
        height: 100px;
        left: 0;
        padding: 0 3rem;
        position: absolute;
        width: 100%;

        img {
            height: auto;
        }
    }
}

.form-dark .md-form {
    label,
    input,
    .dropdown-toggle:after {
        color: white;
    }
}

#profile {
    #utility-bar {
        img {
            max-height: 50px;
        }

        .valign {
            position: absolute;
            top: 50%;
            transform: translate(0, -50%);
            width: 90%;
        }
    }
    #mini-dashboard .card {
        height: 160px;
    }
}

#filter-wrapper {
    background-color: #f2f0f0;

    .filter-button {
        padding: .5rem 1rem;
        height: 30px;
        line-height: 1.4;

        .badge {
            padding: 3px 5px;
            line-height: 1.2;
        }
    }

    #show-future+label {
        padding-left: 25px; 
     }
    
}

table.table.timecard-list {
    width: calc(100% - 3px);
    img {
        max-height: 40px;
    }
    th {
        border: none;
        color: $harris-grey;
        padding: 0 10px;
        vertical-align: bottom;

        .col-sort-direction {
            display: none
        }

        &.sorted {
            .col-sort-direction {
                display: inline;
            }
        }

        &.not-sortable {
            cursor: default;
        }
    }

    tr {
        cursor: pointer;
    }

    td {
        border: 1px solid lightgrey;
        padding: 10px;
        vertical-align: middle;

        &.status {
            border-right: 6px solid lightgrey;
            &.approved {
                border-right: 6px solid #6db444;
            }
            &.pending {
                border-right: 6px solid $info;
            }
            &.open {
                border-right: 6px solid #F99F3C;
            }
        }
    }
}
/* ... */

